tests/paczka1/fuzzy1/63035111.err
Error in line 2: rdPi A154 169,9
Error in line 8: 7VKO4DZ A328 42,5
Error in line 1: A404 A328 79,2
Error in line 16: eUg A154 87,8
Error in line 21: eUg A586 81,3
